<resources>
    <string name="app_name">Cross_Intelligence</string>
    <string name="login_role_hint">选择身份</string>
    <string name="login_register">注册</string>
    <string name="register_dialog_title">注册账号</string>
    <string name="register_account_hint">账号</string>
    <string name="register_password_hint">密码</string>
    <string name="register_role_hint">选择身份</string>
    <string name="register_success">注册成功，请使用新账号登录</string>
    <string name="register_user_exists">账号已存在</string>
    <string name="register_invalid_input">请输入完整的账号、密码和角色</string>
    <string name="location_format">Lat: %1$.5f, Lng: %2$.5f (±%3$.1fm)</string>
    <string name="map_click_format">点击地图: %1$.5f, %2$.5f</string>
    <string name="location_error_format">定位异常：%1$d %2$s</string>
    <string name="profile_sync_status_format">同步状态：%1$s</string>
    <string name="profile_role_format">身份：%1$s</string>
    <string name="profile_user_id_format">账号：%1$s</string>
    <string name="profile_phone_format">电话：%1$s</string>
    <string name="profile_email_format">邮箱：%1$s</string>
    <string name="profile_bio_format">简介：%1$s</string>
    <string name="profile_unknown">未知</string>
    <string name="profile_placeholder_dash">-</string>
    <string name="checkpoint_name_format">%1$d. %2$s</string>
    <string name="checkpoint_coord_format">%1$.5f, %2$.5f</string>
    <string name="result_rank_format">#%1$d</string>
    <string name="result_dnf">DNF</string>
    <string name="result_user_format">选手：%1$s</string>
    <string name="result_total_format">总计：%1$ds</string>
    <string name="result_rank_full_format">排名：#%1$d</string>
    <string name="result_rank_dnf">排名：DNF</string>
    <string name="result_elapsed_format">耗时：%1$ds</string>
    <string name="result_penalty_format">罚时：%1$ds</string>
    <string name="result_status_format">状态：%1$s</string>
    <string name="race_start_date_format">开赛日期：%1$s</string>
    <string name="welcome_title">越野智赛</string>
    <string name="welcome_login">登录</string>
    <string name="welcome_register">注册</string>
    <string name="create_race_title">创建赛事</string>
    <string name="edit_race_title">编辑赛事</string>
</resources>